--- a/_posts/2008-05-19-into-la.md
+++ b/_posts/2008-05-19-into-la.md
@@ -36,11 +36,11 @@ comments:
 ---
 As I mentioned in the <a href="http://twitter.com/misterblue/">Twitter </a>to the left, we drove into LA last night. It was really LA as we experienced freeway traffic jams on a Sunday evening. Amazing. It's in the 80's and a little humid with not a cloud in the sky. At this very moment, I'm sitting beside the pool at our hotel while the laundry goes around -- a necessity of travel.
 <p>
-<div class="g2image_float_left"><wpg2>2477</wpg2></div>After SF, we stopped in Monterey to visit the Aquarium and eat lunch in their touristy Fisherman's Wharf. The aquarium had a lot of amazing displays of fish and plants but the activities were all geared to young children. So we came, we oggled, we exited. 
+<div class="g2image_float_left"><a href="/images/oldimages/2477"><img src="/images/oldimages/thumb/2477" class="oldImageThumb"/></a></div>After SF, we stopped in Monterey to visit the Aquarium and eat lunch in their touristy Fisherman's Wharf. The aquarium had a lot of amazing displays of fish and plants but the activities were all geared to young children. So we came, we oggled, we exited. 
 </p>
 <p>
-The next day was a visit to <a href="http://www.hearstcastle.com">Hearst Castle</a>. When I have 200 million dollars to spend on a house, I hope mine is this magnificent.<div class="g2image_float_right"><wpg2>2657</wpg2></div>
+The next day was a visit to <a href="http://www.hearstcastle.com">Hearst Castle</a>. When I have 200 million dollars to spend on a house, I hope mine is this magnificent.<div class="g2image_float_right"><a href="/images/oldimages/2657"><img src="/images/oldimages/thumb/2657" class="oldImageThumb"/></a></div>
 </p>
 <p>
-<div class="g2image_float_left"><wpg2>2541</wpg2></div>The rest of the day was spent driving down the California coast -- beautiful, beautiful, beautiful: the sea lions basking on the beaches, the white waves crashing against the rocks and the blue, blue ocean.
+<div class="g2image_float_left"><a href="/images/oldimages/2541"><img src="/images/oldimages/thumb/2541" class="oldImageThumb"/></a></div>The rest of the day was spent driving down the California coast -- beautiful, beautiful, beautiful: the sea lions basking on the beaches, the white waves crashing against the rocks and the blue, blue ocean.
 </p>
