Change 'comments:' in  the posts to 'static-comments:' so there can be a 'comments: true' in the post front matter for Disqus.

--- a/_posts/2004-01-13-.md
+++ b/_posts/2004-01-13-.md
@@ -17,7 +17,7 @@ wordpress_url: /?p=506
 date: 2004-01-13 05:58:53
 
 
-comments:
+static-comments:
 - id: 306
   author: Janice
   author_email: bookworm4u@lycos.com
