--- a/_posts/2004-03-06-peanuts.md
+++ b/_posts/2004-03-06-peanuts.md
@@ -18,7 +18,7 @@ date: 2004-03-06 08:21:12
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 168
   author: catpurrson
   author_email: none@none.net
