--- a/_posts/2004-04-04-survived.md
+++ b/_posts/2004-04-04-survived.md
@@ -18,7 +18,7 @@ date: 2004-04-04 11:53:05
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 179
   author: Worldwide Pablo
   author_email: paul@paulnickell.com
