--- a/_posts/2004-09-17-meow.md
+++ b/_posts/2004-09-17-meow.md
@@ -18,7 +18,7 @@ date: 2004-09-17 10:09:37
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 325
   author: catpurrson
   author_email: none@none.net
