--- a/_posts/2004-10-27-sunrise.md
+++ b/_posts/2004-10-27-sunrise.md
@@ -18,7 +18,7 @@ date: 2004-10-27 08:37:32
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 352
   author: cammwithpezz
   author_email: camm242@msn.com
