--- a/_posts/2005-01-15-icy-day.md
+++ b/_posts/2005-01-15-icy-day.md
@@ -18,7 +18,7 @@ date: 2005-01-15 05:52:32
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 989
   author: Misterblue &raquo; On the Blotter
   author_email: 
