--- a/_posts/2005-07-02-595.md
+++ b/_posts/2005-07-02-595.md
@@ -18,7 +18,7 @@ date: 2005-07-02 09:32:16
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 2293
   author: catpurrson
   author_email: none@none.net
