--- a/_posts/2003-07-19-25k-of-running.md
+++ b/_posts/2003-07-19-25k-of-running.md
@@ -18,7 +18,7 @@ date: 2003-07-19 10:39:01
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 122
   author: btezra
   author_email: ceb420@msn.com
