--- a/_posts/2003-12-30-snow.md
+++ b/_posts/2003-12-30-snow.md
@@ -18,7 +18,7 @@ date: 2003-12-30 09:20:55
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 129
   author: tasberry
   author_email: tasberry@tasberry.com
