--- a/_posts/2004-02-27-raptured.md
+++ b/_posts/2004-02-27-raptured.md
@@ -18,7 +18,7 @@ date: 2004-02-27 10:27:09
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 165
   author: amy
   author_email: amy@livingreflections.com
