--- a/_posts/2004-05-02-bingo.md
+++ b/_posts/2004-05-02-bingo.md
@@ -18,7 +18,7 @@ date: 2004-05-02 09:28:28
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 183
   author: Jenn
   author_email: jalvin@illusionaire.com
