--- a/_posts/2004-06-12-accident.md
+++ b/_posts/2004-06-12-accident.md
@@ -18,7 +18,7 @@ date: 2004-06-12 06:24:50
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 194
   author: jill
   author_email: cnjblevins@earthlink.net
