--- a/_posts/2005-02-11-up-to-10-or-so.md
+++ b/_posts/2005-02-11-up-to-10-or-so.md
@@ -18,7 +18,7 @@ date: 2005-02-11 08:49:02
 categories:
 - Blog
 
-comments:
+static-comments:
 - id: 1248
   author: catpurrson
   author_email: none@none.net
